--- a/regstn.html
+++ b/regstn.html
@@ -2,7 +2,7 @@
 <center><head> Event Registration Form</head></center>
 <body>
 <form>
-<table align="center" bgcolor="pink"  border="5" cellspacing="5" cellpadding="14">
+<table align="center" bgcolor="blue"  border="5" cellspacing="5" cellpadding="14">
 <tr><td >Name</td>
         <td><input type="text" name="n"></td>
  </tr>
